--- a/src/components/StatsSection.css
+++ b/src/components/StatsSection.css
@@ -55,7 +55,7 @@
   width: 400px;
   height: 300px;
   background-color: #C8102E;
-  color: white;
+  color: #F5F5F5;
   padding: 3rem;
   font-size: 2rem;
   font-weight: 700;
