--- a/src/components/StatsSection.css
+++ b/src/components/StatsSection.css
@@ -86,12 +86,13 @@
   font-size: 2rem;
   font-weight: 700;
   color: white;
-  text-align: center;
+  text-align: right;
   line-height: 1.4;
   z-index: 3;
   text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   max-width: 500px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: 0;
 }
 
 .flag-circle {
@@ -124,8 +125,8 @@
 .flag-uk {
   left: -400px;
   top: -200px;
-  width: 350px;
-  height: 350px;
+  width: 400px;
+  height: 400px;
   animation: bob 4s ease-in-out infinite;
 }
 
