--- a/src/components/GraphSection.css
+++ b/src/components/GraphSection.css
@@ -154,16 +154,16 @@
 
 @media (max-width: 1300px) {
   .graph-section {
-    min-height: 120vh; /* Taller on mobile */
+    min-height: 115vh; /* Slightly shorter on mobile */
   }
 
   .graph-container {
-    min-height: 120vh; /* Taller on mobile */
+    min-height: 115vh; /* Slightly shorter on mobile */
   }
 
   .graph-wrapper {
-    height: calc(120vh - 120px); /* Taller on mobile */
-    min-height: calc(120vh - 120px);
+    height: calc(115vh - 120px); /* Slightly shorter on mobile */
+    min-height: calc(115vh - 120px);
   }
 }
 
@@ -181,7 +181,7 @@
   }
   
   .graph-wrapper {
-    height: calc(120vh - 100px); /* Taller on mobile */
+    height: calc(115vh - 100px); /* Slightly shorter on mobile */
   }
   
   .node-details {
